RET-3462 - Tackle the CognitiveComplexity and CyclomaticComplexity (#1088)
* simplify isRepresentativeRepresentingMoreThanOneRespondent method

* cleaned EventValidationService

* removed wildcard import and imported individual classes

* refactoring validateSingleCasesState method to remove cognitive complexity violation

* RET-3462final
refactored methods & added new import

* added setNextListedDate & getListedDates methods

* split up methods into smaller methods as requested from code review

* Update src/main/java/uk/gov/hmcts/ethos/replacement/docmosis/service/CaseManagementForCaseWorkerService.java

Co-authored-by: JackReevies <43950645+JackReevies@users.noreply.github.com>

* Update src/main/java/uk/gov/hmcts/ethos/replacement/docmosis/reports/respondentsreport/RespondentsReport.java

Co-authored-by: JackReevies <43950645+JackReevies@users.noreply.github.com>

* switched method to use a stream

* fixed checkstyle issues
reverted changes on amendHearing method
added setNextListedDate test back in

* remove suppressions

* suppressions added back in

* remove suppressions

* updated batik-all version

---------

Co-authored-by: JackReevies <43950645+JackReevies@users.noreply.github.com>